kubernetes/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: backend
    spec:
      containers:
        - name: postgres
          image: postgres:15
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-volume-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
